--- a/Resources/Prototypes/_DeadSpace/Entities/Clothing/Eyes/hud.yml
+++ b/Resources/Prototypes/_DeadSpace/Entities/Clothing/Eyes/hud.yml
@@ -13,7 +13,7 @@
     - Biological
     - Inorganic
     - Silicon
-  - type: ShowHealthIcons
+  - type: ShowHealthIconsa
     damageContainers:
     - Biological
   - type: Tag
@@ -22,3 +22,23 @@
     - HighRiskItem
   - type: FlashImmunity
   - type: SolutionScanner
+
+- type: entity
+  parent: [ClothingEyesBase, ShowSecurityIcons, BaseSecurityContraband, ShowMedicalIcons]
+  id: ClothingEyesHudMedicSecurity
+  name: визор бригмедика
+  description: Особые визоры бригмедика, они могу показывать как состояние пациентов, так и их должность.
+  components:
+  - type: Sprite
+    sprite: _DeadSpace/Clothing/Eyes/Hud/BrigMed.rsi
+  - type: Clothing
+    sprite: _DeadSpace/Clothing/Eyes/Hud/BrigMed.rsi
+  - type: EyeProtection
+    protectionTime: 5
+  - type: GuideHelp
+    guides:
+    - Security
+  - type: Tag
+    tags:
+    - HudSecurity
+    - HudMedical
