--- a/Resources/Prototypes/Catalog/Fills/Lockers/security.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/security.yml
@@ -97,6 +97,7 @@
   components:
   - type: StorageFill
     contents:
+      - id: ClothingEyesHudMedicSecurity
       - id: ClothingHeadsetBrigmedic
       - id: TrackingImplanter
       - id: RubberStampBrigmedic
