--- a/Resources/Prototypes/_DeadSpace/Entities/Clothing/Eyes/hud.yml
+++ b/Resources/Prototypes/_DeadSpace/Entities/Clothing/Eyes/hud.yml
@@ -13,7 +13,7 @@
     - Biological
     - Inorganic
     - Silicon
-  - type: ShowHealthIconsa
+  - type: ShowHealthIcons
     damageContainers:
     - Biological
   - type: Tag
